# FJE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon_config.json  test.json
include/: FunnyJsonExplorer.hpp  IconStyle.hpp  JsonNode.hpp  JsonStyle.hpp  JsonVisitor.hpp  Node.hpp  RectangleJsonStyle.hpp  RectangleStyleRender.hpp  StyleRender.hpp  TreeJsonStyle.hpp  TreeStyleRender.hpp
src/: FunnyJsonExplorer.cpp  JsonNode.cpp  JsonStyle.cpp  JsonVisitor.cpp  Node.cpp  RectangleJsonStyle.cpp  RectangleStyleRender.cpp  TreeJsonStyle.cpp  TreeStyleRender.cpp  main.cpp
